--- a/PawMap/build.gradle
+++ b/PawMap/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 	implementation 'javax.servlet:jstl'
+	implementation 'org.springframework.boot:spring-boot-starter-security:2.5.6'
+	testImplementation 'org.springframework.security:spring-security-test:5.5.3'
 }
 
 test {
