--- a/PawMap/build.gradle
+++ b/PawMap/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	implementation 'javax.servlet:jstl'
 	implementation 'org.springframework.boot:spring-boot-starter-security:2.5.6'
 	testImplementation 'org.springframework.security:spring-security-test:5.5.3'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 }
 
 test {
