--- a/PawMap/src/main/resources/application.properties
+++ b/PawMap/src/main/resources/application.properties
@@ -16,3 +16,9 @@ spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/pawmap?serverTimez
 #DB 로그인 정보 관련
 spring.datasource.hikari.username=study
 spring.datasource.hikari.password=study
+
+#oauth 관련 설정 (소셜 로그인)
+# 1.구글
+spring.security.oauth2.client.registration.google.client-id=858533112623-j2rr9rfvgmk6e90ihupdl84mbcrsolp2.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email, profile
