--- a/PawMap/build.gradle
+++ b/PawMap/build.gradle
@@ -32,6 +32,13 @@ dependencies {
 	implementation 'javax.servlet:jstl'
 	implementation 'org.springframework.boot:spring-boot-starter-security:2.5.6'
 	testImplementation 'org.springframework.security:spring-security-test:5.5.3'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-taglibs'
+	implementation 'org.springframework:spring-context-support:5.3.12'
+	implementation 'com.sun.mail:javax.mail:1.6.2'
+	implementation 'org.codehaus.groovy:groovy:2.5.7'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 test {
