--- a/PawMap/build.gradle
+++ b/PawMap/build.gradle
@@ -38,9 +38,10 @@ dependencies {
 
 	implementation 'org.springframework:spring-context-support:5.3.12'
 	implementation 'com.sun.mail:javax.mail:1.6.2'
-	implementation 'org.codehaus.groovy:groovy:2.5.7'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
-
+	implementation 'org.codehaus.groovy:groovy-all:3.0.3'
+	
+	
 }
 
 test {
