--- a/PawMap/build.gradle
+++ b/PawMap/build.gradle
@@ -36,6 +36,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-taglibs'
 
+	implementation 'org.springframework:spring-context-support:5.3.12'
+	implementation 'com.sun.mail:javax.mail:1.6.2'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'org.codehaus.groovy:groovy-all:3.0.3'
+	
+	
 }
 
 test {
