--- a/PawMap/build.gradle
+++ b/PawMap/build.gradle
@@ -40,6 +40,9 @@ dependencies {
 	implementation 'com.sun.mail:javax.mail:1.6.2'
 	implementation 'org.codehaus.groovy:groovy:2.5.7'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	
+	implementation 'commons-io:commons-io:2.11.0'
+	implementation 'commons-fileupload:commons-fileupload:1.4'
 
 }
 
