--- a/PawMap/build.gradle
+++ b/PawMap/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 	implementation 'org.codehaus.groovy:groovy-all:3.0.3'
 
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
+	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
 
 }
 
