--- a/PawMap/src/main/resources/application.properties
+++ b/PawMap/src/main/resources/application.properties
@@ -61,3 +61,9 @@ spring.mail.username=ampawmap@gmail.com
 spring.mail.password=uzktmjvxvbkkyclp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#카카오 지도표출을 위한 appKey
+kakao.app.key=75fbf64573974f0b2c0c84ac68c3c3d7
+
+#OpenApi키
+openApi.key=436c645575646f77373055706b5371
