dec 3rd 9:50pm work.

--- a/PawMap/src/main/resources/application.properties
+++ b/PawMap/src/main/resources/application.properties
@@ -67,3 +67,8 @@ kakao.app.key=75fbf64573974f0b2c0c84ac68c3c3d7
 
 #OpenApi키
 openApi.key=436c645575646f77373055706b5371
+
+#JSP수정시 서버 재시작없이 바로 적용될 수 있게 설정  (Dec 3rd 19:30pm thomas added)
+server.servlet.jsp.init-parameters.development=true
+
+
