dec 9th backup at 15:04pm

--- a/PawMap/src/main/resources/application.properties
+++ b/PawMap/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.mvc.view.suffix=.jsp
 
 #MySQL 커넥션 관련
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/pawmap?serverTimezone=UTC
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/pawmap?serverTimezone=UTC&allowMultiQueries=true
 
 #DB 로그인 정보 관련
 spring.datasource.hikari.username=study
